--- a/client/src/components/FoodCreated.module.css
+++ b/client/src/components/FoodCreated.module.css
@@ -5,16 +5,14 @@
     background-attachment: fixed;
     position: absolute;
     width: 100%;
-    
-    margin-bottom: 100%;
-    padding-bottom: 5%;
+    height: 100vh;
     
 }
 
 .transparente{
     text-align: center;
     border-radius: 5px;
-    margin: 10px 500px 40px 500px;
+    margin: 1% 5%;
     background-color: rgba(0, 0, 0, 0.8);
     box-shadow: 0 0 20px #000;
     color: aliceblue;
@@ -107,3 +105,39 @@
     width: 500px;
     padding: 0px;
 }
+
+@media screen and (max-width: 800px) {
+    .gereralCreated{
+    text-align: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    position: absolute;
+    background-position: center;
+    width: 100%;
+    height: 100vh;
+    }
+
+    .title{
+        font-size: 100%;
+    }
+    .transparente{
+        margin: 1% 5%;
+    }
+    .inputsss, .inputDiet{
+        width: 70%;
+    }
+
+    .textarea{
+        height: 60%;
+    }
+
+    .buttonSend{
+        margin:4%;
+        font-size: 100%;
+    }
+
+    .errores{
+        font-size: 60%;
+    }
+}
+
