se modifico una media query

--- a/client/src/components/FoodCreated.module.css
+++ b/client/src/components/FoodCreated.module.css
@@ -118,10 +118,13 @@
     }
 
     .title{
-        font-size: 100%;
+        font-size: 40px;
     }
     .transparente{
-        margin: 30% 5%;
+        margin: 30% 3%;
+        
+        
+
     }
     .inputsss, .inputDiet{
         width: 70%;
