--- a/client/src/components/LandingPage.module.css
+++ b/client/src/components/LandingPage.module.css
@@ -4,9 +4,10 @@
     background-image: url('https://s1.1zoom.me/big7/270/Butterbrot_Eggs_Breakfast_Basil_575224_1920x1080.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-position: center;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 }
 
 .tituloPrincipal{
@@ -25,11 +26,29 @@
     width: 10%;
     color: antiquewhite;
     border: none;
-    font-size: 20px;
+    font-size: 100%;
     box-shadow: 0 0 20px #000;
 }
 
 .buttonGetIn:hover{
     background: rgb(192, 84, 37);
     cursor: pointer;
+}
+
+@media screen and (max-width:800px){
+    .centralLanding{
+    text-align: center;
+    background-image: url('https://s1.1zoom.me/big7/270/Butterbrot_Eggs_Breakfast_Basil_575224_1920x1080.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    }
+    .tituloPrincipal{
+        font-size: 40px;
+    }
+    .buttonGetIn{
+        width: 40%;
+        position: relative;
+        margin:auto;
+    }
 }
